# descipline-smart-contracts

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
data/input/: winner_list.txt
data/output/: winner_list_proofs.json
descipline-lib/accounts/: challenge.ts  credentialAuthority.ts  index.ts  receipt.ts  resolution.ts
descipline-lib/errors/: descipline.ts  index.ts
descipline-lib/instructions/: claim.ts  claimAndClose.ts  createChallenge.ts  index.ts  initAuthority.ts  resolve.ts  stake.ts
descipline-lib/programs/: descipline.ts
descipline-lib/types/: index.ts  tokenAllowed.ts
programs/descipline/: Cargo.toml
programs/descipline/src/: constants.rs  error.rs  lib.rs
programs/descipline/src/constants/: mint.rs  mod.rs  sas.rs
programs/descipline/src/errors/: attestation.rs  challenge.rs  claim.rs  credential.rs  general.rs  mod.rs  resolve.rs  schema.rs  stake.rs
programs/descipline/src/instructions/: claim.rs  claim_and_close.rs  create_challenge.rs  init_authority.rs  mod.rs  resolve.rs  shared.rs  stake.rs
programs/descipline/src/interfaces/: attestation.rs  credential.rs  mod.rs  schema.rs
programs/descipline/src/state/: challenge.rs  credential_authority.rs  mod.rs  receipt.rs  resolution.rs
programs/descipline/src/utils/: merkle_verifier.rs  mod.rs  sas_verifier.rs
scripts/: attestation_uri.ts  codama-idl.ts  create-credential-schema.ts  merkle_proof.ts  sas-standard-gill-demo.ts  spl_mint.ts  test.ts  update_program_id.sh
scripts/brine_tree/: Cargo.toml
scripts/brine_tree/src/: main.rs
tests/: descipline.ts
