[package]
name = "brine_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = "0.31.1"  
solana-program = "2.3.0"
brine-tree = "0.5.4"
svm_merkle_tree = "0.1.0"
bs58 = "0.5"               
sha2 = "0.10"              
serde = { version = "1.0", features = ["derive"] }   
serde_json = "1.0"         
bincode = "1.3"            
hex = "0.4"               